--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Veeramanohar</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Blotter/0.1.0/blotter.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Blotter/0.1.0/materials/slidingDoorMaterial.js"></script>
 </head>
 <body>
     <div class="noise"></div>
@@ -19,9 +21,18 @@
         </div>
     </div>
     <div class="main-page">
+        <div id="nav-bar">
+            <ul class="menu-items">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>    
+            <ul/>
+        </div>
         <div class="content">
-            <h1 class="title">Veeramanohar</h1>
-            <p class="subtitle">Website Coming Soon!</p>
+            <h1 class="title text">Veeramanohar</h1>
+            <p class="subtitle text2">Website Coming Soon!</p>
+            <!-- <img class='banner-img' src="assets/images/web new.jpg" -->
+            
         </div>
     </div>
     
