--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Veeramanohar</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
     <div class="cursor"></div>
     <div class="noise"></div>
+    <img src="https://www.transparenttextures.com/patterns/subtle-grunge.png">
     <div class="loader">
         <div class="progress">
             <div id="bar">
@@ -28,9 +30,15 @@
             <ul/>
         </div>
         <div class="content">
+            <div class='main-txt'>
             <span class="subtitle">Hello<img class="hand-wave" src="/assets/images/hand.png">I'am</span>
             <span class="title">Veeramanohar</span>
             <span class="subtitle">Developer  &  Designer</span>
+            </div>
+            <!-- <img class='banner-img' src="assets/images/web new.jpg" -->
+            <div class='btn-container'>
+                <button class="scroll-down-btn">Know More <i class="ri-arrow-right-down-line"></i></button>
+            </div>
         </div>
         
     </div>
