--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
             <div class='btn-container'>
                 <button class="scroll-down-btn">Know More <i class="ri-arrow-right-down-line"></i></button>
             </div>
+            <div class='main-txt'>
+                <span class="subtitle">Hello<img class="hand-wave" src="/assets/images/hand.png">I'am</span>
+                <span class="title">Veeramanohar</span>
+                <span class="subtitle">Developer  &  Designer</span>
+                </div>
+                <!-- <img class='banner-img' src="assets/images/web new.jpg" -->
+                <div class='btn-container'>
+                    <button class="scroll-down-btn">Know More <i class="ri-arrow-right-down-line"></i></button>
+                </div>
+                
         </div>
         
     </div>
