🪲Fixed nav bar bugs

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <div class="cursor"></div>
-    <div class="noise"></div>
-    <img src="https://www.transparenttextures.com/patterns/subtle-grunge.png">
+    <!-- <div class="noise"></div> -->
     <div class="loader">
         <div class="progress">
             <div id="bar">
