--- a/home.html
+++ b/home.html
@@ -14,7 +14,16 @@
     </div>
 
     <div class="content">
-        
+        <h1 class="title">VEERAMANOHAR</h1>
+        <div class="about">
+            <div class="description">
+
+            </div>
+            <div class="img">
+                <img src="" alt="">
+            </div>
+        </div>
+        <div class="subtitle">DESIRE • DESIGN • DEVELOP</div>
     </div>
 
     <div class="footer"></div>
