--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 
             </div>
             <div class="img">
-                <img src="" alt="">
+                <img src="/assets/images/banner img.jpg" alt="banner">
             </div>
         </div>
         <div class="subtitle">DESIRE • DESIGN • DEVELOP</div>
