--- a/home.html
+++ b/home.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles2.css">
     <title>Home</title>
 </head>
 <body>
     <div class="nav-bar">
-        <div class="navbar-img"><img src="/assets/images/barcode.png" alt="veeramanohar"></div>
+        <img class="navbar-img" src="/assets/images/barcode.png" alt="veeramanohar">
         <div class="navbar-txt">Veeramanohar</div>
         <div class="navbar-menu">MENU</div>
     </div>
