--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <!-- <img class='banner-img' src="assets/images/web new.jpg" -->
             <div class='btn-container'>
-                <button class="scroll-down-btn">Know More <i class="ri-arrow-right-down-line"></i></button>
+                <button href='./home.html' class="scroll-down-btn">Know More <i class="ri-arrow-right-down-line"></i></button>
             </div>
         </div>
         
