--- a/page.html
+++ b/page.html
@@ -248,7 +248,7 @@
                         <img src="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5f0efc9a225f6c2d1961f3d1_happy-face-blue-thin.svg" alt="" class="smiley-face-blue"/>
                      </div>
                   </div>
-                  <img src="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5f100b8fe2e262a45b7c70db_photo-eliot-besson.jpg" alt="picture showing Eliot BESSON" data-w-id="a21569cb-252f-1654-3c56-9428fa519a18" sizes="(max-width: 991px) 90vw, (max-width: 1439px) 45vw, (max-width: 1919px) 40vw, 35vw" srcset="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5f100b8fe2e262a45b7c70db_photo-eliot-besson-p-500.jpeg 500w, https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5f100b8fe2e262a45b7c70db_photo-eliot-besson-p-800.jpeg 800w, https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5f100b8fe2e262a45b7c70db_photo-eliot-besson-p-1080.jpeg 1080w, https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5f100b8fe2e262a45b7c70db_photo-eliot-besson.jpg 1344w" class="photo-eliot-besson var"/>
+                  <img src="./assets/images/me.jpg" alt="picture of Veeramanohar" data-w-id="a21569cb-252f-1654-3c56-9428fa519a18" sizes="(max-width: 991px) 90vw, (max-width: 1439px) 45vw, (max-width: 1919px) 40vw, 35vw" srcset="./assets/images/me_500.jpg 500w, ./assets/images/me_800.jpg 800w, ./assets/images/me_1000.jpg 1080w, ./assets/images/me.jpg 1344w" class="photo-eliot-besson var"/>
                   <div class="overlay-image-anim photo-about-me"></div>
                </div>
             </div>
