--- a/page.html
+++ b/page.html
@@ -1,15 +1,13 @@
-
-
 <!DOCTYPE html>
-<html data-wf-domain="www.eliotbesson.com" data-wf-page="5ec653d02a878505111fd21e" data-wf-site="5d934f97854a7e17135843dd">
+<html data-wf-domain="www.veeramanohar.co" data-wf-page="5ec653d02a878505111fd21e" data-wf-site="5d934f97854a7e17135843dd">
    <head>
       <meta charset="utf-8"/>
       <title>Veeramanohar</title>
-      <meta content="Hi and welcome to my Portfolio ! I&#x27;m a french UX/UI Designer based in Lyon, France. I love identify, challenge and solve problems by setting up cutting-edge and personalized solutions. Beside that, i&#x27;m very interested in cognitive science and human behavior, i try to learn about these topics as much as i can !" name="description"/>
-      <meta content="Portfolio of Eliot BESSON - UX/UI Designer Freelance l Lyon, France" property="og:title"/>
-      <meta content="Hi and welcome to my Portfolio ! I&#x27;m a french UX/UI Designer based in Lyon, France. I love identify, challenge and solve problems by setting up cutting-edge and personalized solutions. Beside that, i&#x27;m very interested in cognitive science and human behavior, i try to learn about these topics as much as i can !" property="og:description"/>
-      <meta content="Portfolio of Eliot BESSON - UX/UI Designer Freelance l Lyon, France" property="twitter:title"/>
-      <meta content="Hi and welcome to my Portfolio ! I&#x27;m a french UX/UI Designer based in Lyon, France. I love identify, challenge and solve problems by setting up cutting-edge and personalized solutions. Beside that, i&#x27;m very interested in cognitive science and human behavior, i try to learn about these topics as much as i can !" property="twitter:description"/>
+      <meta content="Hi and welcome to my Portfolio ! I&#x27;m a Developer and designer from, India." name="description"/>
+      <meta content="Portfolio of Veeramanohar - Developer and Designer, India" property="og:title"/>
+      <meta content="Hi and welcome to my Portfolio ! I&#x27;m a Developer and designer from, India." property="og:description"/>
+      <meta content="Portfolio of Veeramanohar - Developer and Designer, India" property="twitter:title"/>
+      <meta content="Hi and welcome to my Portfolio ! I&#x27;m a Developer and designer from, India." property="twitter:description"/>
       <meta property="og:type" content="website"/>
       <meta content="summary_large_image" name="twitter:card"/>
       <meta content="width=device-width, initial-scale=1" name="viewport"/>
@@ -102,12 +100,13 @@
                <div data-w-id="361328f3-c3c0-cb15-d366-cd3f507986f0" class="div-menu-default closed"><a data-w-id="3c7749bf-ee04-583a-3107-9af7bf1c925e" href="#" class="link-2 burger">Close</a></div>
                <div class="molitor-sub-title-overlay menu-item"><a href="/" aria-current="page" class="link-big outlined w--current">Home</a></div>
                <div class="projects-div-menu">
-                  <div class="molitor-sub-title-overlay menu-item"><a href="/projects" class="link-big outlined">Projects</a></div>
-                  <div class="molitor-sub-title-overlay project-item first"><a href="/izclean" class="link-project-name outlined"><span class="text-span">01</span>Pacemon</a></div>
-                  <div class="molitor-sub-title-overlay project-item"><a href="/molitor" class="link-project-name outlined"><span class="text-span">02</span>EMS</a></div>
-                  <div class="molitor-sub-title-overlay project-item"><a href="/blablafoot" class="link-project-name outlined"><span class="text-span">03</span>Write - Blog</a></div>
+                  <div class="molitor-sub-title-overlay menu-item"><a href="#grid-projects" class="link-big outlined">Projects</a></div>
+                  <div class="molitor-sub-title-overlay project-item first"><a target=”_blank” href="https://github.com/imveeru/TeamName.getBestOne_Veeramanohar" class="link-project-name outlined"><span class="text-span">01</span>Pacemon</a></div>
+                  <div class="molitor-sub-title-overlay project-item"><a target=”_blank” href="https://github.com/imveeru/ems" class="link-project-name outlined"><span class="text-span">02</span>EMS</a></div>
+                  <div class="molitor-sub-title-overlay project-item"><a target=”_blank” href="https://github.com/imveeru/mern-blog" class="link-project-name outlined"><span class="text-span">03</span>Write - Blog</a></div>
+                  <div class="molitor-sub-title-overlay project-item"><a target=”_blank” href="https://github.com/imveeru/Emotion-Recognition" class="link-project-name outlined"><span class="text-span">04</span>Emote</a></div>
                </div>
-               <div class="molitor-sub-title-overlay menu-item"><a href="/about" class="link-big outlined">About</a></div>
+               <div class="molitor-sub-title-overlay menu-item"><a href="/about.html" class="link-big outlined">About</a></div>
                <div class="molitor-sub-title-overlay menu-item"><a href="mailto:imveeru14@gmail.com?subject=%F0%9F%91%8B%20Eliot%20!%20" class="link-big outlined">Contact</a></div>
             </div>
          </div>
@@ -126,7 +125,7 @@
       <div id="top-page-hero" data-w-id="0119fc52-5e59-becd-2668-6b8f77b9f024" class="project-grid-section hero wf-section">
          <div class="hero-text">
             <div class="text-line1">
-               <h2 data-w-id="62a56b81-9816-62e6-7fbf-ea810166491e" style="opacity:0" class="h2-white intro">Hi, I&#x27;m</h2>
+               <h2 data-w-id="62a56b81-9816-62e6-7fbf-ea810166491e" style="opacity:0" class="h2-white intro">Hi<img class="hand-wave" src="/assets/images/hand.png">, I&#x27;m</h2>
                <div data-w-id="c3077409-7c4f-7e2c-7912-e731c42306b4" style="-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="anim-title-beige beige"></div>
             </div>
             <div class="clear-inline-state hero-section"></div>
