--- a/page.html
+++ b/page.html
@@ -229,7 +229,7 @@
                      <div data-w-id="a21569cb-252f-1654-3c56-9428fa519a01" class="anim-title-beige beige"></div>
                   </div>
                   <p data-w-id="a21569cb-252f-1654-3c56-9428fa519a02" class="about-me-desc">I’m Veeramanohar, a creative engineer passionate about solving problems by developing intuitive products/services. </p>
-                  <a data-w-id="a21569cb-252f-1654-3c56-9428fa519a04" href="/about" class="learn-more-cta w-inline-block"><img src="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5ecd0e33b6d03772cdcdc923_learnmore-cta.svg" width="100" data-w-id="a21569cb-252f-1654-3c56-9428fa519a05" alt="" class="image-46"/><img src="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5ecbdc0336f72f4c5d5621ea_arrow-right.svg" alt="" class="image-8"/></a>
+                  <a data-w-id="a21569cb-252f-1654-3c56-9428fa519a04" href="/about.html" class="learn-more-cta w-inline-block"><img src="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5ecd0e33b6d03772cdcdc923_learnmore-cta.svg" width="100" data-w-id="a21569cb-252f-1654-3c56-9428fa519a05" alt="" class="image-46"/><img src="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5ecbdc0336f72f4c5d5621ea_arrow-right.svg" alt="" class="image-8"/></a>
                </div>
                <div class="photo-column var w-col w-col-6 w-col-stack">
                   <div data-w-id="a21569cb-252f-1654-3c56-9428fa519a08" class="repeat-text-container">
