--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
          <div id="navigation" class="nav wf-section">
             <div class="menu-default">
                 <div class="logo-menu-icon">
-                    <a data-w-id="d1f0c7dc-a182-754e-d324-646c4c5e2229" href="/" aria-current="page" class="menu-logo w-inline-block w--current"><img src="./assets/images/v.svg" width="26" alt="" class="e-logo"/><img src="./assets/images/ring.svg" alt="logo of eliot BESSON UX/UI Designer Freelance based in Lyon" class="logo"/></a>
+                    <a data-w-id="d1f0c7dc-a182-754e-d324-646c4c5e2229" href="/" aria-current="page" class="menu-logo w-inline-block w--current"><img src="./assets/images/v.svg" width="26" alt="" class="e-logo"/><img src="./assets/images/ring.svg" alt="logo of veeramanohar" class="logo"/></a>
                     <div class="div-menu-default"><a data-w-id="6bfc68f3-83c5-4802-cb06-bf95a4356c30" href="#" class="link-2 beige burger">MENU</a></div>
                  </div>
             </div>
@@ -360,5 +360,19 @@
          function toggleScrolling() {
            $('html').toggleClass('no-scroll');
          }
+         document.onkeydown = function(e) {
+            if(event.keyCode == 123) {
+            return false;
+            }
+            if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+            return false;
+            }
+            if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+            return false;
+            }
+            if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+            return false;
+            }
+            }
       </script>
 
