--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
    <head>
       <meta charset="utf-8"/>
       <title>Veeramanohar</title>
-      <meta content="Hi and welcome to my Portfolio ! I&#x27;m a Developer and designer from, India." name="description"/>
+      <meta content="Hi and welcome to my Portfolio ! I&#x27;m Veeramanohar, a Developer and designer from, India." name="description"/>
       <meta content="Portfolio of Veeramanohar - Developer and Designer, India" property="og:title"/>
-      <meta content="Hi and welcome to my Portfolio ! I&#x27;m a Developer and designer from, India." property="og:description"/>
+      <meta content="Hi and welcome to my Portfolio ! I&#x27;m Veeramanohar, a Developer and designer from, India." property="og:description"/>
       <meta content="Portfolio of Veeramanohar - Developer and Designer, India" property="twitter:title"/>
-      <meta content="Hi and welcome to my Portfolio ! I&#x27;m a Developer and designer from, India." property="twitter:description"/>
+      <meta content="Hi and welcome to my Portfolio ! I&#x27;m Veeramanohar, a Developer and designer from, India." property="twitter:description"/>
       <meta property="og:type" content="website"/>
       <meta content="summary_large_image" name="twitter:card"/>
       <meta content="width=device-width, initial-scale=1" name="viewport"/>
