Fixed excess spacing

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             </div> -->
          </div>
       </div>
-      <div class="pre-footer wf-section"></div>
+      <!-- <div class="pre-footer wf-section"></div> -->
       <div class="footer-section wf-section">
          <div class="footer-div">
             <a data-w-id="08e3fb80-05c9-8c8e-bd25-bc59edf5ad5c" href="/" aria-current="page" class="menu-logo w-inline-block w--current"><img src="./assets/images/ring.svg" alt="logo of veeramanohar" class="logo"/><img src="./assets/images/v.svg" width="26" alt="" class="e-logo"/></a>
