Fixed menu colors

--- a/about.html
+++ b/about.html
@@ -49,16 +49,15 @@
          cursor: pointer;
          }
          }
-         .transform { -webkit-text-fill-color: transparent; 
-         -webkit-text-stroke: 1px #F6F2D8; 
+         .transform { -webkit-text-fill-color: #f6f2d8; 
          } 
-         .outlined { color: transparent; 
-         -webkit-text-stroke: 1px #2148E6; 
+         .outlined { color: #1e1e1e; 
+         -webkit-text-stroke: 1px #1e1e1e; 
          transition: color 0.1s;
          } 
-         .outlined:hover { color: #2148e6; 
+         .outlined:hover { color: #1e1e1e; 
          } 
-         .outlined.w--current { color: #2148e6;
+         .outlined.w--current { color: #1e1e1e;
          letter-spacing: 6px; 
          } 
       </style>
@@ -133,7 +132,7 @@
                </div>
                <div data-w-id="1f5d38c0-c567-c477-1632-590bca850f48" style="opacity:0" class="column-9 w-col w-col-8">
                   <div class="div-block-32">
-                     <p data-w-id="03098568-1295-7f1f-3d4b-3c2b6e14e7fc" style="opacity:0" class="body1">Hey there ! 👋<br/>I&#x27;m Veeramanohar, 22 years old living in Tamil Nadu, India. I’m currently pursuing my bachelors in technology, since mid-2019. On top of that, I freelance for several companies. <br/>‍<br/>I have a background in Web Development and Design so i have knowledge in the different fields of the Web. I love working with different teams to understand the different points of view, to take them into account in the process. <br/>‍<br/>I&#x27;m absolutely passionate about Machine Learning. I love to identify, to challenge and to solve problems by setting up cutting-edge and personalized solutions. More broadly, i&#x27;m very interested in cognitive science and human behavior, i try to learn about these topics as much as i can !</p>
+                     <p data-w-id="03098568-1295-7f1f-3d4b-3c2b6e14e7fc" style="opacity:0" class="body1">Hey there ! 👋<br/>I&#x27;m Veeramanohar, 22 years old living in Tamil Nadu, India. I’m currently pursuing my bachelors in technology at <a href="https://www.amrita.edu">Amrita Vishwa Vidyapeetham</a>, since mid-2019. On top of that, I freelance for several companies. <br/>‍<br/>I have a background in Full Stack Development and Design. I love working with different teams to understand the different points of view, to take them into account in the process. <br/>‍<br/>I&#x27;m absolutely passionate about Machine Learning. I love to identify, to challenge and to solve problems by setting up cutting-edge and personalized solutions. More broadly, i&#x27;m very interested in cognitive science and human behavior, i try to learn about these topics as much as i can !</p>
                      <a href="#div" data-w-id="7f3df55b-40fc-abb5-4249-1b0a81bc39de" style="opacity:0" class="link-block-2 w-inline-block">
                         <img src="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5ec7ff329ef05a7833b5313e_arrow-down.svg" width="18" alt="" class="image-39"/>
                         <div class="label bold var margin-left">SKILLS &amp; SOFTWARES</div>
