--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="http://fonts.cdnfonts.com/css/akira-expanded" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/monument-extended" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/google-sans" rel="stylesheet">
     <script>
         tailwind.config = {
@@ -21,7 +21,7 @@
                   xl: '1440px',
                 },
                 fontFamily: {
-                  title: ['Akira Expanded', 'sans-serif'],
+                  title: ['Monument Extended', 'sans-serif'],
                   body: ['Product Sans', 'sans-serif'],
                 },
                 fontSize:{
@@ -51,14 +51,15 @@
         <img class="w-24 h-auto" src="assets/barcode.svg">
         <div class="hidden lg:flex gap-10 flex-row">
             <p class="font-title text-light text-subtitle cursor-pointer hover:tracking-[0.3rem]">Home</p>
-            <p class="font-title text-light text-subtitle cursor-pointer hover:tracking-[0.3rem] opacity-60 hover:opacity-100">ABOUT</p>
-            <p class="font-title text-light text-subtitle cursor-pointer hover:tracking-[0.3rem] opacity-60 hover:opacity-100">PROJECTS</p>
+            <p class="font-title text-light text-subtitle cursor-pointer hover:tracking-[0.3rem] opacity-60 hover:opacity-100">About</p>
+            <p class="font-title text-light text-subtitle cursor-pointer hover:tracking-[0.3rem] opacity-60 hover:opacity-100">Projects</p>
+            <p href="#contact" class="font-title text-light text-subtitle cursor-pointer hover:tracking-[0.3rem] opacity-60 hover:opacity-100">Contact</p>
         </div>
     </section>
 
     <!-- Main Hero Section -->
-    <section>
-
+    <section class="px-[10%] flex flex-col my-32">
+        <h1 class="text-light font-title text-title">Hi, I'm<br/>Veeramanohar.<br/>A Developer & Designer</h1>
     </section>
     
 </body>
