--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                <div data-w-id="361328f3-c3c0-cb15-d366-cd3f507986f0" class="div-menu-default closed"><a data-w-id="3c7749bf-ee04-583a-3107-9af7bf1c925e" href="#" class="link-2 burger">Close</a></div>
                <div class="molitor-sub-title-overlay menu-item"><a href="/" aria-current="page" class="link-big outlined w--current">Home</a></div>
                <div class="projects-div-menu">
-                  <div class="molitor-sub-title-overlay menu-item"><a href="#grid-projects" class="link-big outlined">Projects</a></div>
-                  <div class="molitor-sub-title-overlay project-item first"><a target=”_blank” href="https://github.com/imveeru/TeamName.getBestOne_Veeramanohar" class="link-project-name outlined"><span class="text-span">01</span>Pacemon</a></div>
+                  <div class="molitor-sub-title-overlay menu-item"><a href="/projects.html" class="link-big outlined">Projects</a></div>
+                  <!-- <div class="molitor-sub-title-overlay project-item first"><a target=”_blank” href="https://github.com/imveeru/TeamName.getBestOne_Veeramanohar" class="link-project-name outlined"><span class="text-span">01</span>Pacemon</a></div>
                   <div class="molitor-sub-title-overlay project-item"><a target=”_blank” href="https://github.com/imveeru/ems" class="link-project-name outlined"><span class="text-span">02</span>EMS</a></div>
                   <div class="molitor-sub-title-overlay project-item"><a target=”_blank” href="https://github.com/imveeru/mern-blog" class="link-project-name outlined"><span class="text-span">03</span>Write - Blog</a></div>
-                  <div class="molitor-sub-title-overlay project-item"><a target=”_blank” href="https://github.com/imveeru/Emotion-Recognition" class="link-project-name outlined"><span class="text-span">04</span>Emote</a></div>
+                  <div class="molitor-sub-title-overlay project-item"><a target=”_blank” href="https://github.com/imveeru/Emotion-Recognition" class="link-project-name outlined"><span class="text-span">04</span>Emote</a></div> -->
                </div>
                <div class="molitor-sub-title-overlay menu-item"><a href="/about.html" class="link-big outlined">About</a></div>
                <div class="molitor-sub-title-overlay menu-item"><a href="mailto:imveeru14@gmail.com?subject=%F0%9F%91%8B%20Veeramanohar%20!%20" class="link-big outlined">Contact</a></div>
