--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="http://fonts.cdnfonts.com/css/monument-extended" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/rockstar" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/google-sans" rel="stylesheet">
     <script>
         tailwind.config = {
@@ -21,11 +21,11 @@
                   xl: '1440px',
                 },
                 fontFamily: {
-                  title: ['Monument Extended', 'sans-serif'],
+                  title: ['Rockstar', 'sans-serif'],
                   body: ['Product Sans', 'sans-serif'],
                 },
                 fontSize:{
-                  'title':'4.5rem',
+                  'title':'4rem',
                   'title-sm':'2.5rem',
                   'subtitle':'1.2rem',
                   'body':'1.1rem',
@@ -59,7 +59,10 @@
 
     <!-- Main Hero Section -->
     <section class="px-[10%] flex flex-col my-32">
-        <h1 class="text-light font-title text-title">Hi, I'm<br/>Veeramanohar.<br/>A Developer & Designer</h1>
+        <h1 class="text-light font-title text-[8rem]"><span class="text-white font-body text-title">Hi, I'm</span><br/>
+        Veeramanohar<br/>
+        <span class="text-white font-body text-title">Developer and Designer</span>
+        </h1>
     </section>
     
 </body>
