--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects-Veeramanohar</title>
-</head>
-<body>
+    <head>
+        <meta charset="utf-8"/>
+        <title>Veeramanohar</title>
+        <meta content="Hi and welcome to my Portfolio ! I&#x27;m Veeramanohar, a Developer and designer from, India." name="description"/>
+        <meta content="Portfolio of Veeramanohar - Developer and Designer, India" property="og:title"/>
+        <meta content="Hi and welcome to my Portfolio ! I&#x27;m Veeramanohar, a Developer and designer from, India." property="og:description"/>
+        <meta content="Portfolio of Veeramanohar - Developer and Designer, India" property="twitter:title"/>
+        <meta content="Hi and welcome to my Portfolio ! I&#x27;m Veeramanohar, a Developer and designer from, India." property="twitter:description"/>
+        <meta property="og:type" content="website"/>
+        <meta content="summary_large_image" name="twitter:card"/>
+        <meta content="width=device-width, initial-scale=1" name="viewport"/>
+        <meta name="google-site-verification" content="MKXPWBubJdAFN1oMyZQFjglibLQWHXzmA09wAa1AWBE" />
+        <link href="./projects.css" rel="stylesheet" type="text/css"/>
+        <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="40ef4698-fd89-68c9-ffb7-024752997f4b"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="c65e2eaa-ef5b-9fdf-6cd8-e08e1f58c333"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="c65e2eaa-ef5b-9fdf-6cd8-e08e1f58c33f"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="aa6327b2-7ec1-8a0a-80a6-1e9cf6bcc397"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="719421d5-3024-f7f2-0cf0-6a33c4985f2d"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="6adf81c7-afdc-32f2-8a8c-4cab1f2c5095"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="719421d5-3024-f7f2-0cf0-6a33c4985f3e"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="9f93e2b9-4d28-1d04-1c34-8219eb43cb87"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a01"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa5199ff"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a18"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a08"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a02"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a04"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa5199fb"] {opacity:0;}}@media (max-width:991px) and (min-width:768px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="c65e2eaa-ef5b-9fdf-6cd8-e08e1f58c333"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="aa6327b2-7ec1-8a0a-80a6-1e9cf6bcc397"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="6adf81c7-afdc-32f2-8a8c-4cab1f2c5095"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="9f93e2b9-4d28-1d04-1c34-8219eb43cb87"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a01"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa5199ff"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a18"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a08"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a02"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a04"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa5199fb"] {opacity:0;}}@media (max-width:767px) and (min-width:480px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="c65e2eaa-ef5b-9fdf-6cd8-e08e1f58c333"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="aa6327b2-7ec1-8a0a-80a6-1e9cf6bcc397"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="6adf81c7-afdc-32f2-8a8c-4cab1f2c5095"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="9f93e2b9-4d28-1d04-1c34-8219eb43cb87"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a01"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa5199ff"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a18"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a08"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a02"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a04"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa5199fb"] {opacity:0;}}@media (max-width:479px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="c65e2eaa-ef5b-9fdf-6cd8-e08e1f58c333"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="aa6327b2-7ec1-8a0a-80a6-1e9cf6bcc397"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="6adf81c7-afdc-32f2-8a8c-4cab1f2c5095"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="9f93e2b9-4d28-1d04-1c34-8219eb43cb87"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a01"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa5199ff"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a18"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a08"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a02"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa519a04"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="a21569cb-252f-1654-3c56-9428fa5199fb"] {opacity:0;}}</style>
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script><script type="text/javascript">WebFont.load({  google: {    families: ["Inter:100,200,300,regular,500,600,700,800,900"]  }});</script><script src="https://use.typekit.net/rny1pzy.js" type="text/javascript"></script><script type="text/javascript">try{Typekit.load();}catch(e){}</script><!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]--><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+        <link rel="icon" type="image/x-icon" href="./assets/images/favicon.bmp">
+        <link href="./assets/images/favicon.bmp" rel="shortcut icon" type="image/x-icon"/>
+        <link href="./assets/images/favicon.bmp" rel="apple-touch-icon"/>
+        <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-171598781-1"></script><script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-171598781-1', {'anonymize_ip': true});</script>
+        <style>@media only screen
+           and (min-device-width: 1024px)
+           and (max-device-width: 1024px)
+           and (orientation: portrait)
+           and (-webkit-min-device-pixel-ratio: 2) {
+           body {
+           cursor: default;
+           }
+           .cursor-wrapper {
+           display: none;
+           }
+           a {
+           cursor: pointer;
+           }
+           }
+           @media only screen
+           and (min-device-width: 1366px)
+           and (max-device-width: 1366px)
+           and (orientation: landscape)
+           and (-webkit-min-device-pixel-ratio: 2) {
+           body {
+           cursor: default;
+           }
+           .cursor-wrapper {
+           display: none;
+           }
+           a {
+           cursor: pointer;
+           }
+           }
+           .transform { -webkit-text-fill-color: transparent; 
+           -webkit-text-stroke: 1px #F6F2D8; 
+           } 
+           .outlined { color: #1e1e1e; 
+           -webkit-text-stroke: 1px #1e1e1e; 
+           transition: color 0.1s;
+           } 
+           .outlined:hover { color: #1e1e1e; 
+           } 
+           .outlined.w--current { color: #1e1e1e;
+           letter-spacing: 6px; 
+           } 
+        </style>
+        <style>
+           html.no-scroll {
+           overflow: hidden;
+           }
+        </style>
+        <script>
+           (function(h,o,t,j,a,r){
+               h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+               h._hjSettings={hjid:1885888,hjsv:6};
+               a=o.getElementsByTagName('head')[0];
+               r=o.createElement('script');r.async=1;
+               r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+               a.appendChild(r);
+           })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        </script>
+        <script>
+           (function(f,b){if(!b.__SV){var e,g,i,h;window.mixpanel=b;b._i=[];b.init=function(e,f,c){function g(a,d){var b=d.split(".");2==b.length&&(a=a[b[0]],d=b[1]);a[d]=function(){a.push([d].concat(Array.prototype.slice.call(arguments,0)))}}var a=b;"undefined"!==typeof c?a=b[c]=[]:c="mixpanel";a.people=a.people||[];a.toString=function(a){var d="mixpanel";"mixpanel"!==c&&(d+="."+c);a||(d+=" (stub)");return d};a.people.toString=function(){return a.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms track_with_groups add_group set_group remove_group register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking start_batch_senders people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user people.remove".split(" ");
+           for(h=0;h<i.length;h++)g(a,i[h]);var j="set set_once union unset remove delete".split(" ");a.get_group=function(){function b(c){d[c]=function(){call2_args=arguments;call2=[c].concat(Array.prototype.slice.call(call2_args,0));a.push([e,call2])}}for(var d={},e=["get_group"].concat(Array.prototype.slice.call(arguments,0)),c=0;c<j.length;c++)b(j[c]);return d};b._i.push([e,f,c])};b.__SV=1.2;e=f.createElement("script");e.type="text/javascript";e.async=!0;e.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?
+           MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";g=f.getElementsByTagName("script")[0];g.parentNode.insertBefore(e,g)}})(document,window.mixpanel||[]);
+           mixpanel.init("0e4b3632c59afc45a98668724be05d66", {"api_host": "https://api-eu.mixpanel.com", batch_requests: true})
+        </script>
+     </head>
+<body class="body-2">
+    <div class="preloader">
+        <div class="beige-overlay-preloader"></div>
+     </div>
     
 </body>
 </html>
