--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html data-wf-domain="www.veeramanohar.co" data-wf-page="5ed4dba4a2501f599e9eebaf" data-wf-site="5d934f97854a7e17135843dd">
    <head>
       <meta charset="utf-8"/>
-      <title>About me | Veeramanohar</title>
+      <title>About - Veeramanohar</title>
       <meta content="Hi and welcome to my Portfolio ! I&#x27;m a Developer and designer from, India." name="description"/>
       <meta content="Portfolio of Veeramanohar - Developer and Designer, India" property="og:title"/>
       <meta content="Hi and welcome to my Portfolio ! I&#x27;m a Developer and designer from, India." property="og:description"/>
