--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="http://fonts.cdnfonts.com/css/rockstar" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/monument-extended" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/google-sans" rel="stylesheet">
     <script>
         tailwind.config = {
@@ -21,7 +21,7 @@
                   xl: '1440px',
                 },
                 fontFamily: {
-                  title: ['Rockstar', 'sans-serif'],
+                  title: ['Monument Extended', 'sans-serif'],
                   body: ['Product Sans', 'sans-serif'],
                 },
                 fontSize:{
@@ -59,9 +59,8 @@
 
     <!-- Main Hero Section -->
     <section class="px-[10%] flex flex-col my-32">
-        <h1 class="text-light font-title text-[8rem]"><span class="text-white font-body text-title">Hi, I'm</span><br/>
-        Veeramanohar<br/>
-        <span class="text-white font-body text-title">Developer and Designer</span>
+        <h1 class="text-light font-title text-[8rem] leading-[9rem]">
+          Hi I'm,<br/>Veeramanohar<br/><span class="text-[5rem] leading-[9rem]">a Developer & a Designer.</span>
         </h1>
     </section>
     
