--- a/projects.html
+++ b/projects.html
@@ -139,9 +139,9 @@
       </div>
       <div id="top-page-hero" data-w-id="0119fc52-5e59-becd-2668-6b8f77b9f024" class="w-[90%] md:w-[78%] p-2 project-grid-section hero wf-section">
          <div>
-            <p class="text-beige font-title text-8xl">PROJECTS</p>
-            <div>
-               <p>Web Development</p>
+            <p class="text-beige font-title text-4xl md:text-8xl">PROJECTS</p>
+            <div class="py-10">
+               <p class="text-white font-title text-2xl md:text-4xl">WEB DEVELOPMENT</p>
                <hr>
             </div> 
          </div>  
