--- a/projects.html
+++ b/projects.html
@@ -141,8 +141,11 @@
          <div>
             <p class="text-beige font-title text-4xl md:text-8xl">PROJECTS</p>
             <div class="py-10">
-               <p class="text-white font-title text-2xl md:text-4xl">WEB DEVELOPMENT</p>
-               <hr>
+               <p class="text-white/60 font-title text-2xl md:text-4xl">WEB DEVELOPMENT</p>
+               <hr class="opacity-50">
+               <div>
+                  
+               </div>
             </div> 
          </div>  
       </div>
