--- a/projects.html
+++ b/projects.html
@@ -143,8 +143,13 @@
             <div class="py-10">
                <p class="text-white/60 font-title text-2xl md:text-4xl">WEB DEVELOPMENT</p>
                <hr class="opacity-50">
-               <div>
-                  
+               <div class="flex flex-col gap-4 py-3 w-full">
+                  <div class="p-3 border-beige/50 hover:border-beige border-[1px]">
+
+                  </div>
+                  <div class="p-3 border-beige/50 hover:border-beige border-[1px]">
+
+                  </div>
                </div>
             </div> 
          </div>  
