--- a/projects.html
+++ b/projects.html
@@ -144,8 +144,12 @@
                <p class="text-white/60 font-title text-2xl md:text-4xl">WEB DEVELOPMENT</p>
                <hr class="opacity-50">
                <div class="flex flex-col gap-4 py-3 w-full">
-                  <div class="p-3 border-beige/50 hover:border-beige border-[1px]">
-
+                  <div class="p-4 flex border-beige/50 hover:border-beige border-[1px]">
+                     <div>
+                        <p>Elective Management System</p>
+                        <p>Built a web app based on Agile Methodology to simplify the elective management process.</p>
+                     </div>
+                     <button>Know more ></button>
                   </div>
                   <div class="p-3 border-beige/50 hover:border-beige border-[1px]">
 
