--- a/projects.html
+++ b/projects.html
@@ -93,6 +93,7 @@
                },
                fonts:{
                   title:"Macaria",
+                  inter:"Inter"
                }
              }
            }
@@ -141,15 +142,15 @@
          <div>
             <p class="text-beige font-title text-4xl md:text-8xl">PROJECTS</p>
             <div class="py-10">
-               <p class="text-white/60 font-title text-2xl md:text-4xl">WEB DEVELOPMENT</p>
-               <hr class="opacity-50">
-               <div class="flex flex-col gap-4 py-3 w-full">
-                  <div class="p-4 flex border-beige/50 hover:border-beige border-[1px]">
-                     <div>
-                        <p>Elective Management System</p>
-                        <p>Built a web app based on Agile Methodology to simplify the elective management process.</p>
+               <p class="text-white/80 font-title text-2xl md:text-4xl">WEB DEVELOPMENT</p>
+               <hr class="opacity-50 mb-2">
+               <div class="flex flex-col gap-4 py-5 w-full">
+                  <div class="p-4 flex justify-between items-center border-beige/50 hover:border-beige border-[2px]">
+                     <div class="p-2">
+                        <p class="text-beige text-3xl ">Elective Management System</p>
+                        <p class="font-sans text-lg text-white/60">Built a web app based on Agile Methodology to simplify the elective management process.</p>
                      </div>
-                     <button>Know more ></button>
+                     <a class="text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
                   </div>
                   <div class="p-3 border-beige/50 hover:border-beige border-[1px]">
 
