--- a/projects.html
+++ b/projects.html
@@ -149,17 +149,25 @@
                   <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
                      <div class="p-2">
                         <p class="text-beige text-3xl ">Elective Management System</p>
-                        <p class="font-sans text-lg text-white/60">Built a web app based on Agile Methodology to simplify the elective management process.</p>
+                        <p class="font-sans text-lg text-white/60">A web app based on Agile Methodology to simplify the elective management process.</p>
                      </div>
-                     <a class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
+                     <a href="https://github.com/imveeru/ems" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
                   </div>
 
                   <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
                      <div class="p-2">
-                        <p class="text-beige text-3xl ">Elective Management System</p>
-                        <p class="font-sans text-lg text-white/60">Built a web app based on Agile Methodology to simplify the elective management process.</p>
+                        <p class="text-beige text-3xl ">Write - Blog</p>
+                        <p class="font-sans text-lg text-white/60">A blog to share your ideas. Built using MERN stack.</p>
                      </div>
-                     <a class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
+                     <a href="https://write-blog-veeru.herokuapp.com/" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
+                  </div>
+
+                  <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
+                     <div class="p-2">
+                        <p class="text-beige text-3xl ">Write - Blog</p>
+                        <p class="font-sans text-lg text-white/60">A blog to share your ideas. Built using MERN stack.</p>
+                     </div>
+                     <a href="https://write-blog-veeru.herokuapp.com/" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
                   </div>
                   
                </div>
